# fastapi-template

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: health.py  router.py  user.py
app/core/: config.py  logging.py
app/db/: schema.py  session.py
app/models/: user.py
app/services/: user_service.py
